Do not solve pano meta flicker.

--- a/src/frontend/styles/ImageViewer.module.css
+++ b/src/frontend/styles/ImageViewer.module.css
@@ -1,6 +1,6 @@
-/* src/styles/ImagePopup.module.css */
+/* src/styles/ImageViewer.module.css */
 
-.imagePopup {
+.ImageViewer {
   position: fixed;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
   transition: background-color var(--transition-duration) ease;
 }
 
-.imagePopup.loaded {
+.ImageViewer.loaded {
   background-color: black;
 }
 
